fix signup style on safari.  Fixes #157.

--- a/src/scenes/home/signup/signup.css
+++ b/src/scenes/home/signup/signup.css
@@ -23,7 +23,6 @@
   margin:auto;
   border: 1px solid rgb(92,105,122);
   padding: 10px;
-  height: 100%;
   width: 100%;
 }
 
